# angelscript

./: .gitignore  angelscript.sublime-project
sdk/add_on/autowrapper/: aswrappedcall.h
sdk/add_on/scripthandle/: scripthandle.cpp
sdk/angelscript/projects/cmake/: CMakeLists.txt
sdk/angelscript/source/: as_config.h
sdk/samples/game/source/: gamemgr.cpp  gamemgr.h  scriptmgr.cpp
sdk/tests/test_feature/projects/cmake/: CMakeLists.txt
sdk/tests/test_feature/source/: test_addon_debugger.cpp  test_exceptionmemory.cpp  testexecutemixedargs.cpp
sdk/tests/test_performance/projects/cmake/: CMakeLists.txt
sdk/tests/test_performance/source/: main.cpp  test_assign.cpp  test_basic.cpp  test_call.cpp  test_call2.cpp  test_fib.cpp  test_int.cpp  test_intf.cpp  test_mthd.cpp  test_string.cpp  test_string2.cpp  test_string_pooled.cpp  test_thisprop.cpp  utils.h
